--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "tinyapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "express_server.js",
   "scripts": {
     "start": "./node_modules/.bin/nodemon -L express_server.js",
-    "test": "./node_modules/mocha/bin/mocha"  },
+    "test": "./node_modules/mocha/bin/mocha",
+    "lint": "eslint"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sawsanCS/tinyapp.git"
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "eslint": "^7.15.0",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6"
   }
